--- a/src/templates/examples/indexExample.html
+++ b/src/templates/examples/indexExample.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Home Page</title>
+    <title>LabAid</title>
 </head>
 
 <body>
-    <h1>Home Page!</h1>
+    <h1>Welcome to LabAid</h1>
     <p>{{content}}</p>
     <p>{{r}}</p>
     <!--- Pode-se escrever "somewhat native Python"
