--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %} Home Page {% endblock %}
+{% block title %} LabAid {% endblock %}
 
 {% block content %}
-<h1>Test</h1>
+<h1>Welcome to LabAid!</h1>
+
+
 {% endblock %}
