Some grid setup with bootstrap

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,19 @@
 {% block title %} LabAid {% endblock %}
 
 {% block content %}
-<h1>Welcome to LabAid!</h1>
+<div class="container-fluid my-2 mx-1">
+    <h1>Welcome to LabAid!</h1>
+</div>
 
+<div class="container-fluid my-4 mx-2">
+    <div class="row">
+        <div class="col col-md-9">
+            <p>Column 1</p>
+        </div>
+        <div class="col md-auto">
+            <p>Column 2</p>
+        </div>
 
+    </div>
+</div>
 {% endblock %}
