--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,7 +9,7 @@
 </head>
     <body>
         <!---Navbar from bootstrap, um bom sítio onde começar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">LabAid</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +31,7 @@
                       SI Unit Converter
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Temperature</a></li>
+                      <li><a class="dropdown-item" href="/temperature">Temperature</a></li>
                       <li><a class="dropdown-item" href="#">Volume</a></li>
                       <li><a class="dropdown-item" href="#">Pressure</a></li>
                     </ul>
