--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -2,9 +2,11 @@
 {% block title %}Login Page{% endblock %}
 
 {% block content %}
-<form action="#" method="post">
-    <p>Name:</p>
-    <p><input type="text" name="nm"/></p>
-    <p><input type="submit" name="submit"/></p>
-</form>
+<div class="container-fluid my-4 mx-2">
+    <form action="#" method="post">
+        <p>Name:</p>
+        <p><input type="text" name="nm"/></p>
+        <p><input type="submit" name="submit"/></p>
+    </form>
+</div>
 {% endblock %}
