--- a/src/templates/temperature.html
+++ b/src/templates/temperature.html
@@ -15,10 +15,12 @@
       <div class="col-sm-9">
         <div class="row">
           <div class="col-8 col-sm-6">
-            Level 2: .col-8 .col-sm-6
+            <form action="#" method="post">
+              <p><input type="text" name="F_Input" placeholder="0"/>   ºFahrenheit</p>
+            </form>
           </div>
           <div class="col-4 col-sm-6">
-            Level 2: .col-4 .col-sm-6
+            Celsius output
           </div>
         </div>
       </div>
