--- a/src/templates/temperature.html
+++ b/src/templates/temperature.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
+
 {% block title %}Temperature Converter{% endblock %}
+
+{% block page_scripts %} <script type="text/javascript" src="../resources/javascript.js"> </script>{% endblock page_scripts %}
 
 {% block content %}
 <div class="container-fluid my-2 mx-1">
@@ -16,12 +19,11 @@
         <div class="row">
           <div class="col-md-auto col-sm-4">
             <form action="#" method="post">
-              <p><input id="temp_input" type="text" name="F_Input" placeholder="0" style="width: 100px;"/>   ºF</p>
+              <p><input id="temp_F" type="text" name="F_Input" placeholder="0" style="width: 100px;"/>   ºF</p>
             </form>
           </div>
           <div class="col-md-auto col-sm-4">
-            Celsius output:
-            <p><input id="temp_output" type="text" name="" placeholder="0" style="width: 100px;"/>   ºC</p>
+            <p><input id="temp_C" type="text" name="" placeholder="0" style="width: 100px;"/>   ºC</p>
           </div>
         </div>
       </div>
@@ -29,7 +31,8 @@
   </div>
 
   <script>
-    document.getElementById("temp_input")
+    
+    document.getElementById("temp_F")
     .addEventListener("keyup", function (evt) {
       // console.log for debbuging purposes
       console.log(this.value);
@@ -37,10 +40,23 @@
       // conversão da temperatura
       // let converted_val = (5/9) * (this.value - 32);
 
-      // return/display converted value
-      document.getElementById("temp_output").value = Math.round((5/9) * (this.value - 32));
+      // return/display converted value with 2 decimals
+      document.getElementById("temp_C").value = parseFloat(((5/9) * (this.value - 32)).toFixed(2));
     }, false);
+
+    document.getElementById("temp_C")
+    .addEventListener("keyup", function (evt) {
+      // console.log for debbuging purposes
+      console.log(this.value);
+
+      // conversão da temperatura
+      // let converted_val = (5/9) * (this.value - 32);
+
+      // return/display converted value with 2 decimals
+      document.getElementById("temp_F").value = parseFloat(((9/5) * (this.value) + 32).toFixed(2));
+    }, false);
+
   </script>
 
-{% endblock %}
+{% endblock content %}
 
